<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/txtDDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="0"
        android:textAlignment="center"
        android:textColor="#2B2929"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelDConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/confirmed"
        android:textColor="#2B2929"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDDate" />

    <TextView
        android:id="@+id/txtDConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelDConfirmed"
        app:layout_constraintStart_toEndOf="@+id/labelDConfirmed"
        app:layout_constraintTop_toTopOf="@+id/labelDConfirmed" />

    <TextView
        android:id="@+id/labelDSuspect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/suspects"
        android:textColor="#2B2929"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDConfirmed" />

    <TextView
        android:id="@+id/txtDSuspect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelDSuspect"
        app:layout_constraintStart_toEndOf="@+id/labelDSuspect"
        app:layout_constraintTop_toTopOf="@+id/labelDSuspect" />

    <TextView
        android:id="@+id/labelDCured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/cured"
        android:textColor="#2B2929"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDSuspect" />

    <TextView
        android:id="@+id/txtDCured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelDCured"
        app:layout_constraintStart_toEndOf="@+id/labelDCured"
        app:layout_constraintTop_toTopOf="@+id/labelDCured" />

    <TextView
        android:id="@+id/labelDMonitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/monitoring"
        android:textColor="#2B2929"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDCured" />

    <TextView
        android:id="@+id/txtDMonitoring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelDMonitoring"
        app:layout_constraintStart_toEndOf="@+id/labelDMonitoring"
        app:layout_constraintTop_toTopOf="@+id/labelDMonitoring" />

    <TextView
        android:id="@+id/labelDDescarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/descarted"
        android:textColor="#2B2929"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDMonitoring" />

    <TextView
        android:id="@+id/txtDDescarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelDDescarted"
        app:layout_constraintStart_toEndOf="@+id/labelDDescarted"
        app:layout_constraintTop_toTopOf="@+id/labelDDescarted" />

    <TextView
        android:id="@+id/labelDDead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/deads"
        android:textColor="#2B2929"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDDescarted" />

    <TextView
        android:id="@+id/txtDDead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelDDead"
        app:layout_constraintStart_toEndOf="@+id/labelDDead"
        app:layout_constraintTop_toTopOf="@+id/labelDDead" />

    <TextView
        android:id="@+id/labelDDomicile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/domicile"
        android:textColor="#2B2929"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDDead" />

    <TextView
        android:id="@+id/txtDDocimile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelDDomicile"
        app:layout_constraintStart_toEndOf="@+id/labelDDomicile"
        app:layout_constraintTop_toTopOf="@+id/labelDDomicile" />

    <TextView
        android:id="@+id/labelDHospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/hospital"
        android:textColor="#2B2929"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDDomicile" />

    <TextView
        android:id="@+id/txtDHospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelDHospital"
        app:layout_constraintStart_toEndOf="@+id/labelDHospital"
        app:layout_constraintTop_toTopOf="@+id/labelDHospital" />

</androidx.constraintlayout.widget.ConstraintLayout>