<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="00/00/0000"
        android:textColor="#2B2929"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelSuspect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/suspects"
        android:textColor="#353434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

    <TextView
        android:id="@+id/txtSuspect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/labelSuspect"
        app:layout_constraintStart_toEndOf="@+id/labelSuspect"
        app:layout_constraintTop_toTopOf="@+id/labelSuspect" />

    <TextView
        android:id="@+id/labelConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/confirmed"
        android:textColor="#353434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelSuspect" />

    <TextView
        android:id="@+id/txtConfirmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/labelConfirmed"
        app:layout_constraintStart_toEndOf="@+id/labelConfirmed"
        app:layout_constraintTop_toTopOf="@+id/labelConfirmed" />

    <TextView
        android:id="@+id/labelCured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/cured"
        android:textColor="#353434"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelConfirmed" />

    <TextView
        android:id="@+id/txtCured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/labelCured"
        app:layout_constraintStart_toEndOf="@+id/labelCured"
        app:layout_constraintTop_toTopOf="@+id/labelCured" />
</androidx.constraintlayout.widget.ConstraintLayout>